# gtbench

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  LICENSE_HEADER  README.md  RESULTS.md  advdiff.py  benchmark.cpp  benchmark_mt.cpp  convergence.py  convergence_tests.cpp  gen_horsweep_plots.py  gh200_build.sh  plot_utilities.py  test.py
.github/workflows/: format.yml  python.yml  tests.yml
.travis/: Dockerfile
cmake/: GTBenchConfig.cmake.in  export.cmake
common/: CMakeLists.txt  options.cpp  options.hpp  types.hpp
communication/: CMakeLists.txt  backends.hpp  communication.hpp  device.cpp  factorize.hpp  gcl.cpp  gcl.hpp  ghex_comm.cpp  ghex_comm.hpp  ghex_comm_mt.cpp  ghex_comm_mt.hpp  simple_mpi.cpp  simple_mpi.hpp  single_node.cpp  single_node.hpp
docker/base/: Dockerfile
execution/: run.hpp  timer.hpp
gt/: CMakeLists.txt  advection.cpp  advection.hpp  benchmark.cpp  benchmark_mt.cpp  boundary.hpp  common.hpp  convergence_tests.cpp  diffusion.cpp  diffusion.hpp  driver.cpp  driver_ghex.cpp  driver_simple_mpi.cpp  driver_single_node.cpp  mpi_driver.cpp  plot.py  solver.hpp  solver_state.hpp  tridiagonal.hpp
gt/common/: types.hpp
gt/communication/: CMakeLists.txt  backends.hpp  communication.hpp  factorize.hpp  ghex_comm.cpp  ghex_comm.hpp  ghex_comm_mt.hpp  mpi_comm.cpp  mpi_comm.hpp  simple_mpi.cpp  simple_mpi.hpp  single_node.cpp  single_node.hpp
gt/execution/: convergence_tests.hpp  run.hpp
gt/numerics/: CMakeLists.txt  advection.cpp  advection.hpp  computation.hpp  convergence_tests.hpp  diffusion.cpp  diffusion.hpp  solver.hpp  tridiagonal.hpp
gt/verification/: analytical.hpp  convergence.hpp  run.hpp  timer.hpp
include/gtbench/common/: options.hpp  types.hpp
include/gtbench/io/: base64.hpp  io.hpp  numpy.hpp  util.hpp  vtk.hpp
include/gtbench/numerics/: advection.hpp  computation.hpp  diffusion.hpp  solver.hpp
include/gtbench/runtime/: computation.hpp  discrete_analytical.hpp  function_scope.hpp  result.hpp  run.hpp  runtime.hpp
include/gtbench/runtime/device/: set_device.hpp
include/gtbench/runtime/gcl/: run.hpp
include/gtbench/runtime/ghex_comm/: factorize.hpp  run.hpp
include/gtbench/runtime/simple_mpi/: run.hpp
include/gtbench/runtime/single_node/: run.hpp
include/gtbench/verification/: analytical.hpp  convergence.hpp
io/: CMakeLists.txt  base64.hpp  io.cpp  io.hpp  numpy.cpp  numpy.hpp  util.cpp  vtk.cpp  vtk.hpp
numerics/: CMakeLists.txt  advection.cpp  advection.hpp  computation.hpp  diffusion.cpp  diffusion.hpp  solver.hpp  tridiagonal.hpp
python/: CMakeLists.txt  gtbench.cpp  test.py
runtime/: CMakeLists.txt  computation.hpp  discrete_analytical.hpp  function_scope.hpp  interface.hpp  result.hpp  run.hpp  runtime.hpp
runtime/device/: CMakeLists.txt  set_device.cpp  set_device.hpp
runtime/gcl/: CMakeLists.txt  run.cpp  run.hpp
runtime/ghex_comm/: CMakeLists.txt  factorize.hpp  run.cpp  run.hpp
runtime/simple_mpi/: CMakeLists.txt  run.cpp  run.hpp
runtime/single_node/: CMakeLists.txt  run.cpp  run.hpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  options.cpp
src/io/: CMakeLists.txt  io.cpp  numpy.cpp  util.cpp  vtk.cpp
src/numerics/: CMakeLists.txt  advection.cpp  diffusion.cpp  solver.cpp
src/runtime/: CMakeLists.txt
src/runtime/device/: CMakeLists.txt  set_device.cpp
src/runtime/gcl/: CMakeLists.txt  run.cpp
src/runtime/ghex_comm/: CMakeLists.txt  run.cpp
src/runtime/simple_mpi/: CMakeLists.txt  run.cpp
src/runtime/single_node/: CMakeLists.txt  run.cpp
verification/: analytical.hpp  convergence.hpp
